# openvxtest

./: .gitignore  CMakeLists.txt  README.md  openvx_ext.sln  shell.nix
Demo/: CMakeLists.txt  DemoEngine.h  demo.cpp  demo.vcxproj  demo.vcxproj.filters  stdafx.h
Demo/Kernels/: demo_FindAllContours.cpp  demo_FindContours.cpp  demo_Threshold.cpp
Description/: README.md
Lib/: CMakeLists.txt  libopenvx.vcxproj  libopenvx.vcxproj.filters
Lib/Common/: types.h
Lib/Common/openvx/: vx.h  vx_api.h  vx_types.h
Lib/Kernels/: ref.h
Lib/Kernels/ref/: ref_FindAllContours.c  ref_FindContours.c  ref_Threshold.c
demo/: CMakeLists.txt
demo/src/: demo_cclabeling.cpp  demo_threshold.cpp  idemo.hpp  main.cpp
description/: README.md
kernels/: CMakeLists.txt
kernels/include/: kernels.h
kernels/include/detail/: types.h
kernels/include/openvx/: vx_types.h
kernels/src/: ref_cclabeling.cpp  ref_threshold.c
